--- a/application/views/representantes/registro.twig
+++ b/application/views/representantes/registro.twig
@@ -2,6 +2,11 @@
 {% block content %}
     {% set attributes = {'id' :'frmrepresentante'} %}
     {{ form_open(base_url(action), attributes) }}
+        {% if  representantes.id %}
+            {% set data = {'type':'hidden', 'name':'id', 'id' : 'id',  'value':representantes.id|default('')} %}
+            {{ form_input(data) }}
+        {% endif %}
+
     <div class="form-body">
         <div class="row">
                 <div class="col-md-12"><h2>{{ titulo }} Representante</h2></div>
@@ -16,7 +21,7 @@
             
             <div class="col-md-6">
                 <div class="form-group">
-                    {% set attributes = {'class' : 'control-label'} %} 
+                    {% set attributes = {'class' : 'control-label'} %}
                     {{ form_label('Nombre:  <span id="msgNombre"></span>', 'nombre', attributes) }}
                     {% set data = {'name':'nombre_re', 'id' : 'nombre_re', 'class' : 'form-control ', 'placeholder':'Nombre', 'value':representantes.nombre_re|default('')} %}
                     {{ form_input(data) }}
@@ -27,7 +32,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    {% set attributes = {'class' : 'control-label'} %} 
+                    {% set attributes = {'class' : 'control-label'} %}
                     {{ form_label('Apellido:  <span id="msgApellido"></span>', 'apellido', attributes) }}
                     {% set data = {'name':'apellido_re', 'id' : 'apellido_re', 'class' : 'form-control ', 'placeholder':'Apellido', 'value':representantes.apellido_re|default('')} %}
                     {{ form_input(data) }}
@@ -36,7 +41,7 @@
             
             <div class="col-md-6">
                 <div class="form-group">
-                    {% set attributes = {'class' : 'control-label'} %} 
+                    {% set attributes = {'class' : 'control-label'} %}
                     {{ form_label('Celular:  <span id="msgCelular"></span>', 'celular', attributes) }}
                     {% set data = {'name':'celular', 'id' : 'celular', 'class' : 'form-control ', 'placeholder':'Teléfono Celular', 'value':representantes.celular|default('')} %}
                     {{ form_input(data) }}
@@ -47,7 +52,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    {% set attributes = {'class' : 'control-label'} %} 
+                    {% set attributes = {'class' : 'control-label'} %}
                     {{ form_label('Telefono:  <span id="msgTelefono"></span>', 'telefono', attributes) }}
                     {% set data = {'name':'telefono', 'id' : 'telefono', 'class' : 'form-control ', 'placeholder':'Teléfono Local', 'value':representantes.telefono|default('')} %}
                     {{ form_input(data) }}
@@ -56,7 +61,7 @@
 
             <div class="col-md-6">
                 <div class="form-group">
-                    {% set attributes = {'class' : 'control-label'} %} 
+                    {% set attributes = {'class' : 'control-label'} %}
                     {{ form_label('Correo:  <span id="msgEmail"></span>', 'correo', attributes) }}
                     {% set data = {'name':'email', 'id' : 'email', 'class' : 'form-control ', 'placeholder':'Correo', 'value':representantes.email|default('')} %}
                     {{ form_input(data) }}
@@ -71,13 +76,14 @@
                     <select name="estados_id" id="estados_id" class="form-control">
                         <option value="0">Selecciona: </option>
                         {% for estado in estados %}
-                            {% set selected = ''%}
+                            {% set selected = '' %}
                             {% if estado.id == representantes.estados_id %}
-                                {% set selected = 'selected="selected"'%}
+                                {% set selected = 'selected="selected"' %}
                             {% endif %}
-                        <option {{selected}} value="{{estado.id}}">{{estado.estado}}</option>
+                            <option {{ selected }} value="{{ estado.id }}">{{ estado.estado }}</option>
                         {% endfor %}
                     </select>
+
                 </div>
             </div>
 
@@ -85,7 +91,7 @@
                 <div class="form-group">
                     <label class="control-label">Municipio: </label>
                     <select name="municipios_id" id="municipios_id" class="form-control">
-                        <option value="0">Selecciona: {{representantes.municipio|default('')}}</option>
+                        <option value="0">Selecciona:</option>
                     </select>
                 </div>
             </div>
@@ -96,7 +102,7 @@
                 <div class="form-group">
                     <label class="control-label">Parroquia: </label>
                     <select name="parroquias_id" id="parroquias_id" class="form-control">
-                        <option value="0">Selecciona: {{representantes.parroquia|default('')}}</option>
+                        <option value="0">Selecciona:</option>
                     </select>
                 </div>
             </div>
@@ -105,7 +111,7 @@
                 <div class="form-group">
                     <label class="control-label">Sector: </label>
                     <select name="sectores_id" id="sectores_id" class="form-control">
-                        <option value="0">Selecciona: {{representantes.sector|default('')}}</option>
+                        <option value="0">Selecciona:</option>
                     </select>
                 </div>
             </div>
@@ -114,7 +120,7 @@
         <div class="row">
             <div class="col-md-12">
                 <label class="control-label">Dirección: </label>
-                <textarea rows="5" name="direccion" id="direccion" class="form-control" placeholder="Escriba nombre de Calle y N° de casa:">{{representantes.direccion|default('')}}</textarea>
+                <textarea rows="5" name="direccion" id="direccion" class="form-control" placeholder="Escriba nombre de Calle y N° de casa:">{{ representantes.direccion|default('') }}</textarea>
             </div>
 
             <div class="col-md-12">
@@ -127,81 +133,125 @@
         </div>
     </div>
     {{ form_close() }}
+    {% set data = {'type':'hidden', 'name':'municipio_id', 'id' : 'municipio_id',  'value':representantes.municipios_id|default('')} %}
+    {{ form_input(data) }}
+
+    {% set data = {'type':'hidden', 'name':'parroquia_id', 'id' : 'parroquia_id',  'value':representantes.parroquias_id|default('')} %}
+    {{ form_input(data) }}
+
+    {% set data = {'type':'hidden', 'name':'sector_id', 'id' : 'sector_id',  'value':representantes.sectores_id|default('')} %}
+    {{ form_input(data) }}
 
 {% endblock %}
 {% block script %}
     <script type="text/javascript">
-        $(document).ready(function() {
-            $('#guardar').click(function(){
-                if($('#cedula').val() == ''){
+        $(document).ready(function () {
+            $('#guardar').click(function () {
+                if ($('#cedula').val() == '') {
                     alert('Debe ingresar la Cedula');
                     $('#cedula').focus();
-                }else if($('#nombre_re').val() == ''){
+                } else if ($('#nombre_re').val() == '') {
                     alert('Debe ingresar el Nombre');
                     $('#nombre_re').focus();
-                }else if($('#apellido_re').val() == ''){
+                } else if ($('#apellido_re').val() == '') {
                     alert('Debe ingresar el Apellido');
                     $('#apellido_re').focus();
-                }else if($('#estados_id').val() == ''){
+                } else if ($('#estados_id').val() == '') {
                     alert('Debe ingresar el Estado');
                     $('#estados_id').focus();
-                }else if($('#municipios_id').val() == ''){
+                } else if ($('#municipios_id').val() == '') {
                     alert('Debe ingresar el Municipio');
                     $('#municipios_id').focus();
-                }else if($('#parroquias_id').val() == ''){
+                } else if ($('#parroquias_id').val() == '') {
                     alert('Debe ingresar el Sector');
                     $('#parroquias_id').focus();
-                }else if($('#direccion').val() == ''){
+                } else if ($('#direccion').val() == '') {
                     alert('Debe ingresar Nombre de calle y N° de casa');
                     $('#direccion').focus();
-                
-                }else{
-            //alert('Enviar');
-            $('#frmrepresentante').submit();
-        }
-    });
 
-            $('#estados_id').on('change',function () {
+                } else {
+                    //alert('Enviar');
+                    $('#frmrepresentante').submit();
+                }
+            });
+
+            $('#estados_id').on('change', function () {
                 var estados_id = $(this).val();
                 $("#municipios_id").find('option:gt(0)').remove().end();
-                if(estados_id > 0){
-                    $.get( "/preescolar/municipios/Municipios/searchMunEst/"+estados_id, function( response ) {
+                if (estados_id > 0) {
+                    $.get("/preescolar/municipios/Municipios/searchMunEst/" + estados_id, function (response) {
                         var $option = '';
-                        $.each(response, function(i, municipios) {
-                            $option += '<option value="'+municipios.id+'">'+municipios.municipio+'</options>'
+                        $.each(response, function (i, municipios) {
+                            $option += '<option value="' + municipios.id + '">' + municipios.municipio + '</options>'
                         });
                         $("#municipios_id").append($option)
                     }, 'json');
                 }
             })
 
-            $('#municipios_id').on('change',function () {
+            $('#municipios_id').on('change', function () {
                 var municipios_id = $(this).val();
                 $("#parroquias_id").find('option:gt(0)').remove().end();
-                if(municipios_id > 0){
-                    $.get( "/preescolar/parroquias/Parroquias/searchParMun/"+municipios_id, function( response ) {
+                if (municipios_id > 0) {
+                    $.get("/preescolar/parroquias/Parroquias/searchParMun/" + municipios_id, function (response) {
                         var $option = '';
-                        $.each(response, function(i, parroquias) {
-                            $option += '<option value="'+parroquias.id+'">'+parroquias.parroquia+'</options>'
+                        $.each(response, function (i, parroquias) {
+                            $option += '<option value="' + parroquias.id + '">' + parroquias.parroquia + '</options>'
                         });
                         $("#parroquias_id").append($option)
                     }, 'json');
                 }
             })
 
-            $('#parroquias_id').on('change',function () {
+            $('#parroquias_id').on('change', function () {
                 var parroquias_id = $(this).val();
                 $("#sectores_id").find('option:gt(0)').remove().end();
-                if(parroquias_id > 0){
-                    $.get( "/preescolar/sectores/Sectores/searchSerPar/"+parroquias_id, function( response ) {
+                if (parroquias_id > 0) {
+                    $.get("/preescolar/sectores/Sectores/searchSerPar/" + parroquias_id, function (response) {
                         var $option = '';
-                        $.each(response, function(i, sectores) {
-                            $option += '<option value="'+sectores.id+'">'+sectores.sector+'</options>'
+                        $.each(response, function (i, sectores) {
+                            $option += '<option value="' + sectores.id + '">' + sectores.sector + '</options>'
                         });
                         $("#sectores_id").append($option)
                     }, 'json');
                 }
             })
         });
+        var estados_id = $('#estados_id').find('option').filter(':selected').val();
+        if(estados_id > 0){
+            var municipio_id = $('#municipio_id').val();
+            var parroquia_id = $('#parroquia_id').val();
+            var sector_id = $('#sector_id').val();
+
+            $.get("/preescolar/municipios/Municipios/searchMunEst/" + estados_id, function (response) {
+                var $option = '';
+                $.each(response, function (i, municipios) {
+                    $option += '<option value="' + municipios.id + '">' + municipios.municipio + '</options>'
+                });
+                $("#municipios_id").append($option)
+                $("#municipios_id").val(municipio_id)
+            }, 'json');
+
+            $.get("/preescolar/parroquias/Parroquias/searchParMun/" + municipio_id, function (response) {
+                var $option = '';
+                $.each(response, function (i, parroquias) {
+                    $option += '<option value="' + parroquias.id + '">' + parroquias.parroquia + '</options>'
+                });
+                $("#parroquias_id").append($option)
+                $("#parroquias_id").val(parroquia_id)
+            }, 'json');
+
+
+            $.get("/preescolar/sectores/Sectores/searchSerPar/" + parroquia_id, function (response) {
+                var $option = '';
+                $.each(response, function (i, sectores) {
+                    $option += '<option value="' + sectores.id + '">' + sectores.sector + '</options>'
+                });
+                $("#sectores_id").append($option)
+                $("#sectores_id").val(sector_id)
+            }, 'json');
+
+
+        }
     </script>
 {% endblock %}
